assets/scss/_tablet.scss
/* ==============================
/* ==============================
*********************************
•••••••••••••••••••••••••••••••••

#################################

// Global Styles

#################################

•••••••••••••••••••••••••••••••••
*********************************
/* ==============================
/* =========================== */


/*
=======================

    Master Heading

=======================
*/

body {background: color(white, -2);}

.master-header {
  background: color(white);
  padding: 1rem 0;
  position: relative !important;
  flex-direction: row;
  width: 100%;
  max-width: 144rem;
  margin: 0 auto 0;
  border-radius: .3rem .3rem 0 0;

  &-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
    max-width: 1440px;
    padding: 0 2rem;
    margin: 0 auto;
    flex-basis: auto;
    flex-grow: 1;
  }

  body.nightmode & {
    background: color(black, 0, 0.9);
  }
}

.master-header .heading,
.master-header nav,
.master-header .backdropfilter.heading,
.master-header .backdropfilter nav {
  background-color: transparent !important;
  -webkit-backdrop-filter: blur(0);
  body.nightmode & {
    background-color: transparent;
  }
}

.master-header nav {
  max-width: 400px;
  min-width: 200px;
  display: block;
  flex-basis: auto;
  flex-grow: 1;
  padding: 0;
  border-bottom-color: transparent !important;

  ul {
    min-height: 50px;
    align-items: center;

    li {
      font-size: $font-size-h3;
    }
  }

}

/*
=======================

    Main Content

=======================
*/

.page-content {
  background: color(white, -1);
  max-width: 144rem;
  margin: 0 auto;
  padding-top: 0;
}


/*
=======================

    Master Footer

=======================
*/


footer {
  height: 24rem;
  max-width: 144rem;
  margin: 0 auto;
  border-left: 1px solid color(white, -1);
  border-right: 1px solid color(white, -1);
  border-bottom: 1px solid color(white, -1);
  border-radius: 0 0 .3rem .3rem;

  body.nightmode & {
    border-color: grayscale(1);
  }
}

footer .footer-nav {
  width: 100%;
  // flex-direction: row;

}

footer .footer-nav .main-footer-nav li,
footer .footer-nav .secondary-footer-nav li {
  margin: .6rem 2rem;
}

/* ==============================
/* ==============================
*********************************
•••••••••••••••••••••••••••••••••

#################################

// Blog Posts Directory

#################################

•••••••••••••••••••••••••••••••••
*********************************
/* ==============================
/* =========================== */



/*
=======================

    Individual Entries

=======================
*/


section.entry-directory {
  display: flex;
  flex-wrap: wrap;
  padding: 4rem 10rem;
  width: 100%;
  max-width: 1440px;
  margin: 0 auto;
}


article.entry-snippet {

  @include first(1) {
    text-align: center;
    background: color(white);
    border-radius: .6rem;
    padding: 10rem 1.6rem;
    margin-bottom: 6rem;

    body.nightmode & {
      background: color(black, -1);

      p:after {
        background: linear-gradient(to bottom, color(black, -1, 0.0), color(black, -1, 0.6) 100%);
      }
    }

    h2 {
      font-size: $font-size-h1;
      text-align: center;
    }
    h3 {
      font-size: $font-size-h2;
      text-align: center;
    }

    p {
      font-size: $font-size-base;
      max-width: 50rem;
      margin: 2rem auto;
      text-align: left;
      -webkit-line-clamp: 8;

      &:after {
        background: linear-gradient(to bottom, color(white, 0, 0.0), color(white, 0, 0.6) 100%);
      }
    }

  }
  @include after-first(1) {
    width: 30%;
    max-width: 30%;
    margin-right: 3.33333333%;
    flex-basis: auto;
    flex-grow: 1;
  }
  //
  // @include last(1) {
  //   margin-right: 50%;
  // }
}



/* ==============================
/* ==============================
*********************************
•••••••••••••••••••••••••••••••••

#################################

// Individual Blog Post

#################################

•••••••••••••••••••••••••••••••••
*********************************
/* ==============================
/* =========================== */


.blog-entry h1.post-title {
  line-height: $line-height-heading;
  font-size: 8rem;
  display: block;
  width: 100%;
  max-width: 100rem;
  padding: 0 2rem;
  margin: 3rem auto;
  color: color(brand-color-two);
}

.blog-entry ul {
  margin: 0 auto;
  padding: 0 4rem;
  width: 100%;
  max-width: 80rem;

  li {
    padding: 0;
    margin: 0 0 2rem;
  }
}



/* ==============================
/* ==============================
*********************************
•••••••••••••••••••••••••••••••••

#################################

// Featured Work Directory

#################################

•••••••••••••••••••••••••••••••••
*********************************
/* ==============================
/* =========================== */
.featured-work {
  display: flex;
  flex-wrap: wrap;
}

.work-thumb {
  display: inline-block;
  width:50%;
  margin: 0;

  &:first-of-type {
    // margin-top: 4rem;
  }

  &:nth-of-type(even) {
    margin-right: 0;

    .work-thumb-title {
      right: inherit;
      text-align: left;
    }
  }

  &:last-of-type:nth-of-type(odd) {
    // margin: 0 auto 2rem auto;
    width: 50%;
    display: block;
  }
}

/* ==============================
/* ==============================
*********************************
•••••••••••••••••••••••••••••••••

#################################

// Individual Case Study

#################################

•••••••••••••••••••••••••••••••••
*********************************
/* ==============================
/* =========================== */


.workstudy figure.doubleimage img {
  width: 50%;
}

